--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,13 +1,14 @@
 name: CI
-on: [push, pull_request]
+on: push
 jobs:
   run_tests:
-    runs-on: [windows-latest, ubuntu-latest, macOS-latest]
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@main
-      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.12.0'
+          python-version: '3.12'
           architecture: 'x64'
       - name: Install requirements
         run: pip install -r requirements.txt
