--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Run tests
-        run: python Tests_and_measurements/CorrectnessTests.py
+        run: python CorrectnessTests.py
